# $Id$

2006-10-04	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* core/Base/Assert.class.php: simplified isInteger-checking, succeeds
	on integer's with leading zeros now; arrived from trunk.

2006-08-23	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* core/Cache/PeclMemcached.class.php: several stfu's from trunk.

2006-08-18	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* main/Containers/StorableContainer.class.php: backported
	getIdsList() fix from trunk.

2006-08-08	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* core/DB/: now php-5.2 compatible, backported from trunk.

2006-07-21	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* 0.2.16 released.

2006-07-12	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* core/Form/Form.class.php: getTexturalErrors() is deprecated in
	favour of getTextualErrors().

2006-06-25	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* 0.2.15 released.

	* main/Utils/TextUtils.class.php, core/Form/Filter.class.php: synced
	with trunk.

2006-06-21	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* main/DAOs/FileSystemDaoWorker.class.php,
	main/DAOs/SmartDaoWorker.class.php,
	main/DAOs/VoodooDaoWorker.class.php,
	core/Cache/WatermarkedPeer.class.php, core/DB/Sequenceless.class.php,
	core/DB/Dialect.class.php, core/DB/LiteDialect.class.php,
	core/Base/Stringable.class.php, core/Base/Instantiatable.class.php,
	core/Base/Session.class.php, core/OSQL/InsertOrUpdateQuery.class.php,
	core/OSQL/DBColumn.class.php, core/OSQL/DataType.class.php:
	synced with trunk.

2006-06-01	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* main/Containers/ManyToManyLinkedFull.class.php: unlinking bugfix
	from trunk.

2006-05-27	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* 0.2.14 released.

2006-05-22	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* main/DAOs/FileSystemDaoWorker.class.php: arrived from trunk.

2006-05-20	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* main/Utils/HeaderUtils.class.php,