@@ -1,5 +1,10 @@
 # $Id$
 
+2006-10-18	Konstantin V. Arkhipov	<voxus@shadanakar.org>
+
+	* core/Form/PrimitiveImage.class.php: big images' handling
+	fixed.
+
 2006-10-04	Konstantin V. Arkhipov	<voxus@shadanakar.org>
 
 	* core/Base/Assert.class.php: simplified isInteger-checking, succeeds
